--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,12 +5,30 @@ permalink: /talks/
 author_profile: true
 ---
 
-{% if site.talkmap_link == true %}
+INVITED TALKS:
+1.	“The Universe & Mathematical modelling”: Webinar talk given as a resource person at JSS academy of Technical Education, Noida, 11 June 2020.  
+2.	“The Universe and our Current Understanding”: Talk given as an invited speaker at 2nd National Conference on Recent Trends in Mathematics with Applications, Department of Mathematics, Shri Ramswaroop Memorial University, Lucknow, 30-31 Jan 2020.
+3.	“The Universe & Mathematical Cosmology”: Talk given as a chief guest in a program at Vivekananda College, Delhi University, Delhi, 29 Jan 2020.
+4.	“Theories of Gravitation and Cosmological Modelling”: Webinar talk given as a resource person at Stellar Universe, Delhi, 29 Sept 2019.
+5.	“Scalar fields models of Dark Energy”: Talk given as a resource person at Stellar Universe, Delhi 24 Feb 2019.
+6.	“Cosmological Models and Dark Energy”: Talk given as an invited speaker at the National Conference on Recent Trends in Mathematics with Applications, Department of Mathematics, Shri Ramswaroop Memorial University, Lucknow, 21 - 22 Feb 2019. 
 
-<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
 
-{% endif %}
+INVITED TALKS:
+1.	“The Universe & Mathematical modelling”: Webinar talk given as a resource person at JSS academy of Technical Education, Noida, 11 June 2020.  
+2.	“The Universe and our Current Understanding”: Talk given as an invited speaker at 2nd National Conference on Recent Trends in Mathematics with Applications, Department of Mathematics, Shri Ramswaroop Memorial University, Lucknow, 30-31 Jan 2020.
+3.	“The Universe & Mathematical Cosmology”: Talk given as a chief guest in a program at Vivekananda College, Delhi University, Delhi, 29 Jan 2020.
+4.	“Theories of Gravitation and Cosmological Modelling”: Webinar talk given as a resource person at Stellar Universe, Delhi, 29 Sept 2019.
+5.	“Scalar fields models of Dark Energy”: Talk given as a resource person at Stellar Universe, Delhi 24 Feb 2019.
+6.	“Cosmological Models and Dark Energy”: Talk given as an invited speaker at the National Conference on Recent Trends in Mathematics with Applications, Department of Mathematics, Shri Ramswaroop Memorial University, Lucknow, 21 - 22 Feb 2019. 
 
-{% for post in site.talks reversed %}
-  {% include archive-single-talk.html %}
-{% endfor %}
+
+PAPER PRESENTATIONS
+IN CONFERENCES:
+1.	“Reconstruction of Cosmic History from a Simple Parametrization of H” presented in the National Conference on Differential Geometry and General Relativity, Department of Mathematics, Sardar Patel University, Gujarat, 28-29 Nov 2017.
+2.	“Anisotropic Cosmological Models with a Specific form of Hubble Parameter” presented in the International Conference on General Relativity, Sant Gadge Baba Amravati University, Amravati, 25-28 Nov 2015.
+3.	“On Simultaneous Variation of Some Cosmological Parameters in presence of Interacting Dark Energy” presented in the International Conference on Recent Advances in Mathematics, (ICRAM), Rastrasant Tukadoji Maharaj Nagpur University, Nagpur, 20-23 Jan 2014.
+4.	“On Simultaneous Variation of Some Cosmological Parameters” presented in the International Conference on Recent Advances in Mathematical Sciences and Applications, (ICRAMSA), Rajiv Gandhi Proudyogiki Vishwavidyalaya (RGPV), Bhopal, 24-26 Dec 2013.
+5.	“Some FRW Models Filled with Matter and Radiation in Presence of Vacuum Energy” presented in the National Conference on Modern Analysis and Allied Areas, Banaras Hindu University (BHU), Varanasi, 23-24 Feb 2007 
+7.	“String Cosmological Model in LRS-Bianchi Type-I Space-time” presented in Thirty First Annual   Conference of Orissa Mathematical Society (OMS), Bhubaneswar, 7-8 Feb 2004. 
+8.	“Non-existence of String Cosmological Model in Kink Space-time” presented in the Second National Conference on Applicable Mathematics in Wave Mechanics and Vibrations (WMVC), Jalpaiguri, 15-16 Mar 2003.
