--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,7 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
-
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+##TEACHING INTERESTS:##
+Specialization: Applied Mathematics
+Current Teachings: Linear algebra, Differential equations, Calculus
+Subjects Taught: Mathematical Physics, Engineering Mathematics, Differential Equations, Linear Algebra, Basic Statistics, Operations Research, Graph Theory, Modelling & Simulation, Industrial management, Value Education.
